fixed vertical overflow of tag menu to scroll

--- a/components/NotesMenu/NotesMenu.module.scss
+++ b/components/NotesMenu/NotesMenu.module.scss
@@ -2,6 +2,7 @@
 
 .notes-menu {
     height: 100%;
+    overflow-y: overlay;
     max-height: 100%;
     width: 300px;
     min-width: 200px;
