--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,6 +22,7 @@ a {
 }
 
 ::-webkit-scrollbar {
+    position: fixed;
     width: 12px;
 }
 
